Update CSRF trusted origins configuration in settings.py to directly use the value from the environment, enhancing clarity and maintainability.

--- a/docker/default.env
+++ b/docker/default.env
@@ -2,6 +2,7 @@ COMPOSE_PROJECT_NAME=private_library
 
 SECRET_KEY=
 ALLOWED_HOSTS=
+CSRF_TRUSTED_ORIGINS=
 
 DATABASE_ENGINE=django.db.backends.postgresql
 DATABASE_HOST=db
