--- a/docker_debug/default.env
+++ b/docker_debug/default.env
@@ -2,6 +2,7 @@ COMPOSE_PROJECT_NAME=private_library
 
 SECRET_KEY=
 ALLOWED_HOSTS=
+CSRF_TRUSTED_ORIGINS=
 
 DATABASE_ENGINE=django.db.backends.postgresql
 DATABASE_HOST=db
