Update Docker Compose configuration to standardize environment variable names
- Renamed PostgreSQL-related environment variables to a more consistent naming convention.
- Added ALLOWED_HOSTS and CSRF_TRUSTED_ORIGINS variables for enhanced security and configuration clarity.

--- a/docker_debug/compose.yaml
+++ b/docker_debug/compose.yaml
@@ -11,10 +11,12 @@ services:
     environment:
       - SECRET_KEY=${SECRET_KEY}
       - DATABASE_ENGINE=${DATABASE_ENGINE}
-      - POSTGRES_HOST=${DATABASE_HOST}
-      - POSTGRES_USER=${DATABASE_USER}
-      - POSTGRES_PASSWORD=${DATABASE_PASS}
-      - POSTGRES_DB=${DATABASE_DB}
+      - DATABASE_HOST=${DATABASE_HOST}
+      - DATABASE_USER=${DATABASE_USER}
+      - DATABASE_PASS=${DATABASE_PASS}
+      - DATABASE_DB=${DATABASE_DB}
+      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
+      - CSRF_TRUSTED_ORIGINS=${CSRF_TRUSTED_ORIGINS}
     depends_on:
       - db
     ports:
